Support Java 1.8
Goodbye `var` :-(

Closes #2